manifests/ns-default/petclinic-0-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  labels:
    app: petclinic-svc
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: docker.io/library/petclinic-test:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 500m
              memory: 1G
            limits:
              cpu: 1000m
              memory: 2G
          ports:
            - name: petclinic-port
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: petclinic-port
            initialDelaySeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: petclinic-port
            initialDelaySeconds: 60
            timeoutSeconds: 15
